// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> renders a progress bar 1`] = `
<div
  className="wrapper-0-2-1"
>
  <div
    className="bar-0-2-2 bar_leading-0-2-3 bar_trailing-0-2-4"
  >
    <div
      className="bar-0-2-2 bar_leading-0-2-3 bar_trailing-0-2-4 progress-0-2-5"
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders leading 1`] = `
<div
  className="wrapper-0-2-1"
>
  <div
    className="bar-0-2-2 bar_trailing-0-2-4"
  >
    <div
      className="bar-0-2-2 bar_trailing-0-2-4 progress-0-2-5"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders trailing 1`] = `
<div
  className="wrapper-0-2-1"
>
  <div
    className="bar-0-2-2 bar_leading-0-2-3"
  >
    <div
      className="bar-0-2-2 bar_leading-0-2-3 progress-0-2-5"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;
